[package]
name = "ssh-manager"
version = "0.1.0"
edition = "2021"
description = "A tool to manage multiple SSH accounts easily"

[dependencies]
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
home = "0.5"
